--- a/modules/team_manager/public/style/index_style.css
+++ b/modules/team_manager/public/style/index_style.css
@@ -55,6 +55,10 @@ a:hover{
 	text-decoration:underline;
 	color:#00599d;
 }
+p{
+	margin:0;
+	padding:0;
+}
 h1{
 	font-variant:small-caps;
 	margin-top:5px;
@@ -209,27 +213,31 @@ td[name="middle_font_td_left"]{
 	float:left;
 	width:99%;
 	padding:0.5%;
-	background-color:rgba(0, 0, 0, 0.05);
+	background-color:rgba(255, 255, 255, 0.4);
 	border-radius:5px;
 	margin-bottom:8px;
 	
-	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.4);
-	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,.4);
-	box-shadow: 0px 0px 10px rgba(0,0,0,.4);
+	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+	box-shadow: 0px 0px 10px rgba(0,0,0,.2);
 }
 .tracker_inner_container_50{
 	float:left;
-	width:48.5%;
+	width:48.74%;
 	padding:0.5%;
-	background-color:rgba(0, 0, 0, 0.05);
+	background-color:rgba(255, 255, 255, 0.4);
 	border-radius:5px;
 	margin-bottom:8px;
-	margin-right:0.5%;
 	
-	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.4);
-	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,.4);
-	box-shadow: 0px 0px 10px rgba(0,0,0,.4);
+	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+	box-shadow: 0px 0px 10px rgba(0,0,0,.2);
 }
+
+.tracker_inner_container_50[name="2"]{
+	margin-right:0.5%;
+}
+
 .tracker_caption{
 	float:left;
 	width:99%;
