--- a/modules/web_studio/public/style/index_style.css
+++ b/modules/web_studio/public/style/index_style.css
@@ -1,7 +1,8 @@
 @CHARSET "UTF-8";
-/* new_vision/css/index_style.css */
-/* Version 1.0 */
-/* Author: Monogray */
+/*
+Version 1.0
+Author: Monogray
+*/
 
 /* MAIN _______________________________________________________________ */
 html {
@@ -14,7 +15,7 @@ body{
 	color:#212121;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size:0.85em;
-	background: url(../img/bg/5827.jpg)
+	background: url(../img/bg/bg_3.jpg);
 }
 li, menu{
 	list-style-type:none;
@@ -56,11 +57,83 @@ h2{
 	text-transform:uppercase;
 	font-size:1.1em;
 }
+p{
+	margin:0;
+	padding;
+}
+
+
+/* MAIN MENU _________________________________________________________ */
+#main_menu_container{
+	position:absolute;
+	left:0;
+	top:120px;
+	width:200px;
+	height:300px;
+	background-color:rgba(255, 255, 255, 0.7);
+	margin-left:20px;
+}
+.main_menu_item{
+	float:left;
+	width:100%;
+	margin-bottom:3px;
+	font-size:1em;
+}
+.main_menu_item a{
+	float:left;
+	width:70%;
+	margin-left:15%;
+	color:rgb(0, 0, 0);
+	border-bottom:1px solid rgba(0, 0, 0, 0.1);
+	height:25px;
+	padding-bottom:2px;
+	padding-top:8px;
+}
+.main_menu_item:hover{
+	background-color:rgba(255, 255, 255, 0.7);
+}
+.main_menu_item:hover a{
+	border-bottom:1px solid rgba(0, 0, 0, 0);
+}
+.main_menu_item:first-child{
+	margin-top:18%;
+}
 
 
 /* MAIN CONTAINER _________________________________________________________ */
-#main_menu_container{
+#main_container{
 	float:left;
-	width:10%;
-	background-color:rgba(0, 0, 0, 0.05);
+	width:80%;
+	margin-left:240px;
+	background-color:rgba(0, 0, 0, 0.7);
+	color:#ffffff;
+	padding:1%;
+}
+#main_container_caption{
+	float:left;
+	width:80%;
+	margin-left:240px;
+	margin-top:20px;
+	color:#000000;
+	padding:1%;
+	height:23px;
+	background-color:rgba(255, 255, 255, 0.9);
+}
+
+/* PORTFOLIO _________________________________________________________ */
+.portfolio_item{
+	float:left;
+	width:100%;
+	border-bottom:1px solid rgba(255, 255, 255, 0.1);
+	margin-bottom:15px;
+}
+.portfolio_img_container{
+	float:left;
+	width:90%;
+	margin-left:5%;
+}
+.portfolio_img{
+	float:left;
+	height:250px;
+	margin:5px;
 }
