--- a/public/style/index_style.css
+++ b/public/style/index_style.css
@@ -1,8 +1,8 @@
 @CHARSET "UTF-8";
-
-/* new_vision/css/index_style.css */
-/* Version 1.0 */
-/* Author: Monogray */
+/*
+Version 1.0
+Author: Monogray 
+*/
 
 /* MAIN _______________________________________________________________ */
 html {
@@ -15,7 +15,7 @@ body{
 	color:#212121;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size:0.85em;
-	background: url(../img/bg/5827.jpg)
+	background: url(../img/bg/5827.jpg);
 }
 li, menu{
 	list-style-type:none;
@@ -67,7 +67,10 @@ textarea{
 	margin:0;
 	padding:0;
 }
-
+input[type="submit"]{
+	width:100%;
+	height:25px;
+}
 
 
 /* MAIN CONTAINER _________________________________________________________ */
@@ -103,7 +106,7 @@ textarea{
 	border:1px solid rgba(0, 0, 0, 0.1);
 	margin-top:7px;
 	margin-bottom:2px;
-	background-color:rgba(0, 0, 255, 0.02);
+	background-color:rgba(0, 0, 255, 0.05);
 	
 	border-radius:8px;
 	
@@ -113,15 +116,17 @@ textarea{
 }
 .block_area_2{
 	float:left;
-	width:100%;
-	margin-top:10px;
-	margin-bottom:10px;
-	padding-top:4px;
-	padding-bottom:4px;
-	border:1px solid rgba(0, 0, 0, 0.3);
-	background-color:rgba(0, 0, 0, 0.05);
-	
+	width:99%;
+	margin-top:6px;
+	margin-bottom:6px;
+	padding:0.5%;
+	border:1px solid rgba(255, 255, 255, 0.8);
+	background-color:rgba(0, 0, 0, 0.03);
 	border-radius:8px;
+	
+	box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
 }
 .list_table{
 	border-collapse: collapse;
@@ -129,7 +134,7 @@ textarea{
 	width:100%;
 }
 .list_table td{
-	border:1px solid rgba(0, 0, 0, 0.2);
+	border:1px solid rgba(0, 0, 0, 0.1);
 }
 .list_table tr:first-child{
 	text-align:center;
@@ -137,13 +142,15 @@ textarea{
 	color:rgba(255, 255, 255, 0.9);
 	background-color:rgba(0, 0, 0, 0.75);
 }
-.list_table tr:hover{
-	background-color:rgba(0, 0, 0, 0.1);
+.list_table tr{
 	-webkit-transition:all 1s ease-out;
 	-moz-transition:all 1s ease-out;
 	-o-transition:all 1s ease-out;
 	-ms-transition:all 1s ease-out;
 	transition:all 1s ease-out;
+}
+.list_table tr:hover{
+	background-color:rgba(0, 0, 0, 0.1);
 }
 #info_message_container{
 	position:fixed;
@@ -182,4 +189,13 @@ textarea{
 	text-decoration:none;
 	color:#007e06;
 	cursor:pointer;
+}
+
+
+/* SITE ADMINKA _________________________________________________________ */
+/* LAYOUTS _________________________________________________________ */
+.img_arr_img{
+	float:left;
+	clear:left;
+	margin-bottom:2px;
 }
