--- a/modules/web_studio/public/style/index_style.css
+++ b/modules/web_studio/public/style/index_style.css
@@ -15,10 +15,24 @@ body{
 	color:#212121;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size:0.85em;
-	background: url(../img/bg/bg_3.jpg);
+	background: url(../img/bg/bg_2.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+}
+body:before {
+	content: "";
+	position: fixed;
+	top: -10px;
+	left: 0;
+	width: 100%;
+	height: 10px;
+	z-index: 100;
+	-webkit-box-shadow: 0px 0px 20px rgba(0,0,0,.8);
+	-moz-box-shadow: 0px 0px 20px rgba(0,0,0,.8);
+	box-shadow: 0px 0px 20px rgba(0,0,0,.8);
 }
 li, menu{
-	list-style-type:none;
+	_______list-style-type:none;
 	margin:0;
 	padding:0;
 }
@@ -41,31 +55,57 @@ a{
 a:hover{
 	text-decoration:none;
 	color:#007e06;
-	1font-weight:bold;
 }
 h1{
 	font-variant:small-caps;
 	margin-top:0;
-	color:#FF5A00;
+	color:#000000;
 	text-transform:uppercase;
 	font-size:1.5em;
 }
 h2{
+	float:left;
+	width:980px;
 	font-variant:small-caps;
-	margin-top:0;
-	color:#FF5A00;
+	margin-top:8px;
+	padding:10px;
+	color:#000000;
 	text-transform:uppercase;
-	font-size:1.1em;
+	font-size:1.6em;
+	background-color:rgba(255, 255, 255, 0.8);
+	margin-left:-20px;
+	text-indent:10px;
 }
 p{
 	margin:0;
 	padding;
 }
+iframe{
+	float:left;
+	width:100%;
+}
+
+
+/* MAIN LOGO _________________________________________________________ */
+#main_logo_container{
+	position:fixed;
+	left:0;
+	top:36px;
+	width:200px;
+	height:60px;
+	background-color:rgba(255, 255, 255, 0.7);
+	margin-left:20px;
+}
+#main_logo_container img{
+	float:left;
+	margin-left:27px;
+	margin-top:15px;
+}
 
 
 /* MAIN MENU _________________________________________________________ */
 #main_menu_container{
-	position:absolute;
+	position:fixed;
 	left:0;
 	top:120px;
 	width:200px;
@@ -88,6 +128,7 @@ p{
 	height:25px;
 	padding-bottom:2px;
 	padding-top:8px;
+	text-decoration:none;
 }
 .main_menu_item:hover{
 	background-color:rgba(255, 255, 255, 0.7);
@@ -101,23 +142,45 @@ p{
 
 
 /* MAIN CONTAINER _________________________________________________________ */
-#main_container{
-	float:left;
-	width:80%;
-	margin-left:240px;
-	background-color:rgba(0, 0, 0, 0.7);
-	color:#ffffff;
-	padding:1%;
-}
 #main_container_caption{
 	float:left;
-	width:80%;
+	1width:80%;
+	width:960px;
 	margin-left:240px;
 	margin-top:20px;
 	color:#000000;
-	padding:1%;
+	1padding:1%;
+	padding:20px;
 	height:23px;
 	background-color:rgba(255, 255, 255, 0.9);
+}
+#main_container{
+	float:left;
+	width:960px;
+	margin-left:240px;
+	background-color:rgba(0, 0, 0, 0.7);
+	color:#ffffff;
+	1padding:1%;
+	padding:20px;
+	
+	margin-bottom:50px;
+	
+	-webkit-box-shadow: 0px 0px 20px rgba(0,0,0,.5);
+	-moz-box-shadow: 0px 0px 20px rgba(0,0,0,.5);
+	box-shadow: 0px 0px 20px rgba(0,0,0,.5);
+}
+
+
+/* ITEM _________________________________________________________ */
+.item_image_caption{
+	float:left;
+	width:104.2%;
+	margin-bottom:8px;
+	margin-left:-2.1%;
+}
+.item_image_caption img{
+	float:left;
+	width:100%;
 }
 
 /* PORTFOLIO _________________________________________________________ */
@@ -129,11 +192,34 @@ p{
 }
 .portfolio_img_container{
 	float:left;
-	width:90%;
-	margin-left:5%;
+	width:100%;
+	margin-top:1.5%;
 }
 .portfolio_img{
 	float:left;
-	height:250px;
+	height:200px;
+	1width:23%;
 	margin:5px;
+}
+.portfolio_img:hover{
+	cursor:pointer;
+}
+.portfolio_item_summary{
+	float:left;
+	width:100%;
+	font-size:0.9em;
+	text-indent:10px;
+	color:#e9e9e9;
+}
+.portfolio_item_summary p{
+	margin-bottom:8px;
+}
+#portfolio_item_invisible_background{
+	display:none;
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	background-color:rgba(0, 0, 0, 0.7);
 }
